Final update before build season