@@ -1,6 +1,5 @@
 package org.team1619.robot.competitionbot.behavior;
 
-import com.google.common.collect.ImmutableSet;
 import org.team1619.utilities.logging.LogManager;
 import org.team1619.utilities.logging.Logger;
 import org.team1619.models.behavior.Behavior;
@@ -9,6 +8,7 @@ import org.team1619.shared.abstractions.InputValues;
 import org.team1619.shared.abstractions.OutputValues;
 import org.team1619.shared.abstractions.RobotConfiguration;
 import org.team1619.utilities.Config;
+import java.util.Set;
 
 /**
  * Manually Extends and retracts the crossbow
@@ -18,7 +18,7 @@ import org.team1619.utilities.Config;
 public class Comp_Crossbow_Manual implements Behavior {
 
 	private static final Logger sLogger = LogManager.getLogger(Comp_Crossbow_Manual.class);
-	private static final ImmutableSet<String> sSubsystems = ImmutableSet.of("ss_crossbow");
+	private static final Set<String> sSubsystems = Set.of("ss_crossbow");
 
 	private final InputValues fSharedInputValues;
 	private final OutputValues fSharedOutputValues;
@@ -69,7 +69,7 @@ public class Comp_Crossbow_Manual implements Behavior {
 	}
 
 	@Override
-	public ImmutableSet<String> getSubsystems() {
+	public Set<String> getSubsystems() {
 		return sSubsystems;
 	}
 
