@@ -1,6 +1,5 @@
 package org.team1619.robot.competitionbot.behavior;
 
-import com.google.common.collect.ImmutableSet;
 import org.team1619.utilities.logging.LogManager;
 import org.team1619.utilities.logging.Logger;
 import org.team1619.models.behavior.Behavior;
@@ -11,6 +10,7 @@ import org.team1619.shared.abstractions.OutputValues;
 import org.team1619.shared.abstractions.RobotConfiguration;
 import org.team1619.utilities.Config;
 import org.team1619.utilities.Timer;
+import java.util.Set;
 
 /**
  * Reads in a setpoint and calculates a velocity trajectory to get to it
@@ -20,7 +20,7 @@ import org.team1619.utilities.Timer;
 public class Comp_Elevator_States implements Behavior {
 
 	private static final Logger sLogger = LogManager.getLogger(Comp_Elevator_States.class);
-	private static final ImmutableSet<String> sSubsystems = ImmutableSet.of("ss_elevator");
+	private static final Set<String> sSubsystems = Set.of("ss_elevator");
 
 	private final InputValues fSharedInputValues;
 	private final OutputValues fSharedOutputValues;
@@ -117,7 +117,7 @@ public class Comp_Elevator_States implements Behavior {
 	}
 
 	@Override
-	public ImmutableSet<String> getSubsystems() {
+	public Set<String> getSubsystems() {
 		return sSubsystems;
 	}
 }
