@@ -1,6 +1,5 @@
 package org.team1619.robot.protobot1.behavior;
 
-import com.google.common.collect.ImmutableSet;
 import org.team1619.utilities.logging.LogManager;
 import org.team1619.utilities.logging.Logger;
 import org.team1619.models.behavior.Behavior;
@@ -10,10 +9,12 @@ import org.team1619.shared.abstractions.OutputValues;
 import org.team1619.shared.abstractions.RobotConfiguration;
 import org.team1619.utilities.Config;
 
+import java.util.Set;
+
 public class Pro1_Drive_Percent implements Behavior {
 
 	private static final Logger sLogger = LogManager.getLogger(Pro1_Drive_Percent.class);
-	private static final ImmutableSet<String> sSubsystems = ImmutableSet.of("ss_drive");
+	private static final Set<String> sSubsystems = Set.of("ss_drive");
 
 	private final InputValues fSharedInputValues;
 	private final OutputValues fSharedOutputValues;
@@ -75,7 +76,7 @@ public class Pro1_Drive_Percent implements Behavior {
 	}
 
 	@Override
-	public ImmutableSet<String> getSubsystems() {
+	public Set<String> getSubsystems() {
 		return sSubsystems;
 	}
 }
